--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "hotel-booking-app-backend",
   "version": "1.0.0",
-  "description": "Hotal booking app",
-  "main": "index.js",
+  "description": "Hotel booking app backend",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.3",
+    "uuid": "^13.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
