--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "homepage": "https://github.com/mubeejahir/Luxora-Backend#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-cors": "^0.0.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "validator": "^13.15.22"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
