--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-cors": "^0.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
+    "stripe": "^19.3.0",
     "uuid": "^13.0.0",
     "validator": "^13.15.22"
   },
